--- a/.env
+++ b/.env
@@ -1,3 +1,8 @@
-NODE_ENV="production"
+NODE_ENV="production" # production,developement
 DB_URL="mysql://root@localhost/keystone"
 BASE_ADMIN_URL="http://localhost:3000"
+SESSION_SECRET="-- DEV COOKIE SECRET; CHANGE ME --"
+bucketName="YOUR_AWS_INFO"
+region="YOUR_AWS_INFO"
+accessKeyId="YOUR_AWS_INFO"
+secretAccessKey="YOUR_AWS_INFO"
